server: Fix cursor alignment
I can't seem to get these values right. I measured them in Photoshop,
but they still seem off. I wonder if my picking is off inside server.js
itself...

--- a/src/server/server.css
+++ b/src/server/server.css
@@ -1,7 +1,7 @@
 /* Contains some generic server rules. Mostly about cursor styling. */
 
 .xserver.js {
-    cursor: url(arrow.png) 10 5, auto;
+    cursor: url(arrow.png) 8 5, auto;
     outline: none;
     position: relative;
 }
